SubScription Alpha Version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ui.activity.MainActivity">
+        <activity android:name=".ui.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -39,10 +39,9 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".ui.activity.BaseActivity"
-            android:label="@string/title_activity_base"
-            android:theme="@style/AppTheme" />
+        <activity android:name=".ui.activity.MainActivity" />
+
+        <activity android:name=".ui.activity.BaseActivity" />
 
         <activity
             android:name=".ui.activity.SettingsActivity"
