--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "com.jakewharton.timber:timber:${rootProject.ext.timberVersion}"
 
     implementation "com.jakewharton:butterknife:${rootProject.ext.butterKnifeVersion}"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.ext.butterKnifeVersion}"
 
     implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
