Authentication problem token is null after first authenticate .... -> login --> logout --> login , http response code 200 but access_token is null , after destroy login is ok

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,10 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes.each {
-        //  REDDIT BASE URL
+        //  REDDIT BASE URL  - url: https://www.reddit.com/prefs/apps/
         it.buildConfigField 'String', 'REDDIT_BASE_URL', '\"https://www.reddit.com/\"'
+        it.buildConfigField 'String', 'REDDIT_OAUTH_URL', '\"https://oauth.reddit.com/\"'
+        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '\"[SECRET_REDDIT_CLIENT_ID]\"'
     }
     buildTypes {
         release {
