--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-
+        classpath 'com.google.gms:google-services:3.2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -49,7 +49,7 @@ allprojects {
         mikepenzMaterialDesignIconicsVersion = "2.2.0.4@aar"
 
         testJunitVersion = "4.12"
-        espressoVersion = "3.0.1"
+        espressoVersion = "3.0.2"
         testRulesVersion = "1.0.1"
     }
 
