--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     }
     buildTypes.each {
         //  REDDIT BASE URL  - url: https://www.reddit.com/prefs/apps/
-        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '\"[CLIENTID]"'
+        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '\"gHRoCv5jZXeEBw"'
         it.buildConfigField 'String', 'REDDIT_SECRET_STATE', '\"https://www.reddit.com/\"'
         it.buildConfigField 'String', 'REDDIT_ABOUT_URL', '\"rcapstone.android.pelleritoudacity.info"'
         it.buildConfigField 'String', 'REDDIT_REDIRECT_URL', '\"http://rcapstone.android.pelleritoudacity.info/my_redirect"'
