essential player video notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,13 @@
             </intent-filter>
         </service>
 
+        <receiver android:name=".ui.activity.SubRedditActivity$MediaReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
+
+
         <activity android:name=".ui.activity.SubRedditActivity"></activity>
     </application>
 
