--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,10 @@ allprojects {
 
     ext {
         minSdkVersion = 21
-        sdkVersion = 27
-        androidSupportVersion = "$sdkVersion.1.1"
+        sdkVersion = 28
+        androidSupportVersion = "$sdkVersion.0.0-alpha1"
 
-        androidSupportConstraintVersion = "1.1.0"
+        androidSupportConstraintVersion = "1.1.1"
 
         timberVersion = "4.7.0"
         butterKnifeVersion = "8.8.1"
