--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,7 @@
             android:name=".ui.activity.SubRedditActivity"
             android:label="@string/title_activity_submanage"
             android:launchMode="singleTop"
+            android:noHistory="true"
             android:parentActivityName=".ui.activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
