--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,12 @@ android {
     }
     buildTypes.each {
         //  REDDIT BASE URL  - url: https://www.reddit.com/prefs/apps/
-        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '\""'
-        it.buildConfigField 'String', 'REDDIT_SECRET_STATE', '\""'
+        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '\"gHRoCv5jZXeEBw"'
+        it.buildConfigField 'String', 'REDDIT_SECRET_STATE', '\"rcapstone.secret.code125"'
         it.buildConfigField 'String', 'REDDIT_ABOUT_URL', '\"rcapstone.android.pelleritoudacity.info"'
         it.buildConfigField 'String', 'REDDIT_REDIRECT_URL', '\"http://rcapstone.android.pelleritoudacity.info/my_redirect"'
 
-        it.buildConfigField 'String', 'YOUTUBE_DEVELOPER_KEY', '\""'
+        it.buildConfigField 'String', 'YOUTUBE_DEVELOPER_KEY', '\"AIzaSyBQJg5pg9HueI2cS6er9hEh6f1cHTpCUlk"'
     }
     buildTypes {
         debug {
@@ -64,18 +64,18 @@ dependencies {
     implementation "com.android.support:design:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:preference-v7:${rootProject.ext.androidSupportVersion}"
 
+    implementation "com.android.support.constraint:constraint-layout:${rootProject.ext.androidSupportConstraintVersion}"
+
     implementation "commons-io:commons-io:${rootProject.ext.apacheCommonsVersion}"
 
     implementation "com.jakewharton.timber:timber:${rootProject.ext.timberVersion}"
 
     implementation "com.jakewharton:butterknife:${rootProject.ext.butterKnifeVersion}"
-    implementation "com.android.support.constraint:constraint-layout:${rootProject.ext.androidSupportConstraintVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
     annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.ext.butterKnifeVersion}"
 
     implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
     implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
-//    implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okHttpVersion}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okHttpVersion}"
     implementation "com.squareup.okhttp3:okhttp:${rootProject.ext.okHttpVersion}"
 
     implementation "com.google.android.exoplayer:exoplayer-core:${rootProject.ext.exoPlayerVersion}"
