--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,12 @@ android {
     }
     buildTypes.each {
         //  REDDIT BASE URL  - url: https://www.reddit.com/prefs/apps/
-        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '\"gHRoCv5jZXeEBw"'
+        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '\""'
         it.buildConfigField 'String', 'REDDIT_SECRET_STATE', '\"rcapstone.secret.code125"'
         it.buildConfigField 'String', 'REDDIT_ABOUT_URL', '\"rcapstone.android.pelleritoudacity.info"'
         it.buildConfigField 'String', 'REDDIT_REDIRECT_URL', '\"http://rcapstone.android.pelleritoudacity.info/my_redirect"'
 
-        it.buildConfigField 'String', 'YOUTUBE_DEVELOPER_KEY', '\"AIzaSyBQJg5pg9HueI2cS6er9hEh6f1cHTpCUlk"'
+        it.buildConfigField 'String', 'YOUTUBE_DEVELOPER_KEY', '\""'
     }
     buildTypes {
         debug {
