--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,12 +26,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.shortcuts"
                 android:resource="@xml/shortcuts" />
         </activity>
-
-
         <activity android:name=".ui.activity.BaseActivity" />
         <activity
             android:name=".ui.activity.SettingsActivity"
@@ -77,19 +76,16 @@
         <activity
             android:name=".ui.activity.SubRedditActivity"
             android:label="@string/title_activity_submanage"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.MediaYoutubeActivity"
             android:label="@string/title_activity_submanage"
             android:parentActivityName=".ui.activity.SubRedditActivity"
             android:theme="@style/AppTheme.NoActionBar">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.activity.SubRedditActivity" />
         </activity>
-
 
         <provider
             android:name=".data.ContentProvider"
@@ -112,7 +108,7 @@
         </receiver>
 
         <activity android:name=".ui.activity.SubRedditFullScreenActivity" />
-
+        <activity android:name=".ui.activity.SubRedditDetailActivity"></activity>
     </application>
 
 </manifest>
