--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
             android:name=".ui.activity.MediaYoutubeActivity"
             android:label="@string/title_activity_subreddit"
             android:parentActivityName=".ui.activity.SubRedditActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.activity.SubRedditActivity" />
